# audiodecoder.organya

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.organya/: addon.xml  addon.xml.in
audiodecoder.organya/resources/language/English/: strings.po
audiodecoder.organya/resources/language/resource.language.af_za/: strings.po
audiodecoder.organya/resources/language/resource.language.am_et/: strings.po
audiodecoder.organya/resources/language/resource.language.ar_sa/: strings.po
audiodecoder.organya/resources/language/resource.language.ast_es/: strings.po
audiodecoder.organya/resources/language/resource.language.az_az/: strings.po
audiodecoder.organya/resources/language/resource.language.be_by/: strings.po
audiodecoder.organya/resources/language/resource.language.bg_bg/: strings.po
audiodecoder.organya/resources/language/resource.language.bs_ba/: strings.po
audiodecoder.organya/resources/language/resource.language.ca_es/: strings.po
audiodecoder.organya/resources/language/resource.language.cs_cz/: strings.po
audiodecoder.organya/resources/language/resource.language.cy_gb/: strings.po
audiodecoder.organya/resources/language/resource.language.da_dk/: strings.po
audiodecoder.organya/resources/language/resource.language.de_de/: strings.po
audiodecoder.organya/resources/language/resource.language.el_gr/: strings.po
audiodecoder.organya/resources/language/resource.language.en_au/: strings.po
debian/: changelog.in  control  copyright  rules
lib/liborganya/: CMakeLists.txt  decoder.cpp  file.cpp
src/: OrganyaCodec.cpp  OrganyaCodec.h  RingBuffer.h
(+65 files in other folders)
